Ajouts et correctifs : - un problème de z-index pour les sous-menus sur les pages de référentiels (ils passaient sous le bloc gris clair à droite de la page) - la navigation en mobile a été un peu rehaussée pour éviter le débordement - sélectionné, le toggle menu affichait un arrière-plan noir, il fallait supprimer dans main.scss cette déclaration : .toggle-menu:focus {   background: black;   color: white; }
puis, dans navigation.scss, ces changements pour que la home reçoive un encadré

&[aria-current=page].home {
              border: 2px solid orange;
              border-radius: 20%;
            }

l. 85 suppression du 100% width et ajout des margin auto pour le bouton home en mobile

le skip link paraît un peu bas mais la maquette est dépourvue de la gov bar donc avec ça doit aller

et pour éviter les marqueurs losange et trait gauche pour la home, j'ai ajouté un :not (&[aria-current=page]:not(.home)::before {) ligne 99 et, ligne 179 idem &.selected:not(:first-child)::before {

Enfin, j'ai ajouté un item de menu "La vigie de l'accessibilité" (à discuter) avec un lien vers une nouvelle page (dont le contenu est à discuter également). Le fichier conf.json a donc été modifié (ligne 28).

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -27,12 +27,6 @@ h6 {
   font-weight: bold;
 }
 
-
-.toggle-menu:focus {
-  background: black;
-  color: white;
-}
-
 body .toggle-menu span[aria-hidden="true"]:focus, body .toggle-menu span[aria-hidden="true"]:hover {
   background-color: inherit;
 }
