--- a/src/css/navigation.scss
+++ b/src/css/navigation.scss
@@ -46,7 +46,7 @@ header {
       min-width: 220px;
       background-color: $menu-dark-blue;
       position: absolute;
-      top: 105px;
+      top: 104px;
   
       .hide-element {
         border: 0;
@@ -91,21 +91,25 @@ header {
               width: 25px;
               height: 25px;
               display: block;
-              margin: 0;
+              margin: 0 auto;
               padding: 0;
-              width: 100%;
               box-sizing: border-box;
             }
   
-            &[aria-current=page]::before {
+            &[aria-current=page]:not(.home)::before {
               position: absolute;
               content: " ";
               width: 11px;
               height: 11px;
               background-color: $menu-orange;
               top: 13px;
-              left: -23px;
+              left: -7px;
               transform: rotate(45deg);
+            }
+
+            &[aria-current=page].home {
+              border: 2px solid orange;
+              border-radius: 20%;
             }
           }
   
@@ -172,7 +176,7 @@ header {
         }
       }
   
-      &.selected::before {
+      &.selected:not(:first-child)::before {
         content: " ";
         width: 3px;
         height: 100%;
@@ -419,6 +423,7 @@ header {
         ul {
           position: absolute;
           top: 27px;
+          z-index: 10;
         }
   
         &.selected ul {
